--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.3.0",
+    "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.2",
     "node-modules": "^1.0.1",
