--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^7.0.1",
     "http-status-codes": "^2.3.0",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
