--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "nanoid": "^5.0.2",
     "node-modules": "^1.0.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "react-toastify": "^9.1.3"
   }
 }
