--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.2",
     "node-modules": "^1.0.1",
-    "nodemon": "^3.0.1",
-    "react-toastify": "^9.1.3"
+    "nodemon": "^3.0.1"
   }
 }
